fix video align bug

--- a/css/video.css
+++ b/css/video.css
@@ -38,9 +38,7 @@
     cursor: grab;
     user-select: none;
     border-radius: 12px 12px 0 0; 
-    /*background-color: #1e1e1e; /*noir*/
-    /* background: linear-gradient(90deg, #1e3a8a 0%, #3b82f6 100%) ; /*bleu foncé vers bleu clair*/      
-    /* background-color: #334155 ; /*gris */ 
+    background-color: #000000; 
 }
 .bar-toolbar:active {
     cursor: grabbing;
